[tool.poetry]
name = "brain_games"
version = "0.1.0"
description = "My first project"
authors = ["Misha"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.11"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain_games = "brain_games.scripts.brain_games:main"
brain_even = "brain_games.scripts.brain_even:main"
brain_calc = "brain-games.scripts.brain_calc:main"
brain_gcd = "brain-games.scripts.brain-gcd:main"
brain_progression = "brain-games.scripts.brain_progression:main"
brain_prime = "brain-games.scripts.brain-prime:mail"
